# openWakeWord-cpp

./: CMakeLists.txt  download_onnxruntime.ps1  download_onnxruntime.sh
.github/workflows/: build.yml  codeql.yml
include/core/: audio_processor.h  batch_model_wrapper.h  lock_free_buffer.h  lock_free_queue.h  model_wrapper.h  pipeline.h  thread_safe_buffer.h  types.h
include/preprocessors/: preprocessor.h  speex_noise_suppressor.h  vad.h
include/processors/: audio_reader.h  mel_spectrogram.h  speech_embedding.h  wake_word_detector.h
include/utils/: config.h  object_pool.h  ring_buffer.h  simd_audio.h
src/: main.cpp
src/core/: batch_model_wrapper.cpp  model_wrapper.cpp  pipeline.cpp
src/preprocessors/: speex_noise_suppressor.cpp  vad.cpp
src/processors/: mel_spectrogram.cpp  speech_embedding.cpp  wake_word_detector.cpp
src/utils/: config.cpp
